2005-02-19  Richard Hult  <richard@imendio.com>

	* configure.in:
	* data/Makefile.am:
	* data/planner.schemas.in: Add schemas.

	* src/planner-print-dialog.c: (print_dialog_create_page): Don't
	add resource usage view to the list of printable views.

	* src/planner-window.c: (window_populate), (window_view_selected):
	Restore the last active view.

	* src/planner-group-dialog.c (group_cmd_default_free): We don't
	have an old default group so don't unconditionally unref it.

2005-02-19  Richard Hult  <richard@imendio.com>

	* src/planner-format.c (planner_format_duration_with_day_length):
	Fix bug.
	(planner_parse_duration_with_day_length): Add

	* data/glade/add-predecessor.glade: Make lag spinbutton an entry.

	* src/planner-task-dialog.c: Handle lag as other duration instead
	of hardcoded to always be in hours.

2005-02-19  Richard Hult  <richard@imendio.com>

	* libegg/recent-files/egg-recent-view-uimanager.c:
	(egg_recent_view_uimanager_set_list): Add comment.
	* src/planner-window.c: (window_finalize): Free the ui manager and
	recent files view, fixes leak and crash.

2005-02-19  Richard Hult  <richard@imendio.com>

	* src/planner-main.c: (main):
	* src/planner-task-tree.c: Disable dnd to get rid of warning from treeview.
	* src/planner-ttable-tree.c: Likewise.
	* src/planner-window.c: (window_class_init), (window_init),
	(planner_window_open_recent_cb), (window_open_cb),
	(uri_list_extract_uris), (window_drag_data_received_cb),
	(planner_window_new), (planner_window_open),
	(planner_window_open_in_existing_or_new), (window_get_name):
	* src/planner-window.h: Fix bug #139645, open files by
	dragndrop. Refactor the opening code so it can be shared, and use
	it for the added support for opening multiple files from the
	commandline or filechooser.

	* src/planner-window.c (window_drag_data_received_cb) 
	(window_init): Setup drop target for planner files.

2005-02-18  Richard Hult  <richard@imendio.com>

	* Release pre-release 0.12.91.
	